# stglib

./: .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  DISCLAIMER.md  LICENSE.md  MANIFEST.in  README.md  appveyor.yml  code.json  conda-lock.yml  pyproject.toml  requirements-py35.yml  requirements-py36.yml  requirements-py37.yml  requirements-py38.yml  requirements.txt  requirements.yml  setup.cfg  setup.py
.github/workflows/: stglib.yml  stglib_test.yaml  stglib_test_conda.yml
doc/: Makefile  abss.rst  aqd.rst  aqdhr.rst  atmos.rst  code.rst  conda-lock.yml  conf.py  config.rst  contributing.rst  doc-requirements.yml  environment.yml  eofe.rst  exo.rst  glx.rst  hobo.rst  index.rst  install.rst  insttbl.rst  iq.rst  lisst.rst  mar.rst  mc.rst  met.rst  nortek.rst  overview.rst  rdi.rst  readthedocs.yml  requirements.txt  requirements.yml  rsk.rst  runots.rst  sbe.rst  sg.rst  sgtid.rst  sgwvs.rst  sig.rst  son.rst  tb.rst  tcm.rst  (+7 more)
doc/examples/: config.yaml
examples/: GNDCRMET.csv  RBRTu_config.yaml  RBRTu_glob_att.txt  aqd_config.yaml  atmpres.cdf  config.yaml  dw_config.yaml  exo_config.yaml  glob_att1076a.txt  gndcrmet.nc
scripts/: RBRTu_process.ipynb  aqd_make_press_ac.ipynb  aqdturnaround.py  do1110VTu.py  dw_make_press_ac.ipynb  exo_make_press_ac.ipynb  exoturnaround.py  rbrturnaround.py  runRBRTurskcdf2nc.py  runRBRTurskrsk2cdf.py  runaqdcdf2nc.py  runaqdhdr2cdf.py  runaqdhrcdf2nc.py  runaqdhrhdr2cdf.py  runcfchecker.py  rundiwasp.m  rundiwasp_aqd.m  runea400cdf2nc.py  runea400log2cdf.py  runecocdf2nc.py  runecocsv2cdf.py  runeofecdf2nc.py  runeofelog2cdf.py  runexocdf2nc.py  runexocsv2cdf.py  runexoxls2cdf.py  runhlmcdf2nc.py  runhlmcsv2cdf.py  runhwlbcdf2nc.py  runhwlbcsv2cdf.py  runiqcdf2nc.py  runiqmat2cdf.py  runrdicdf2nc.py  runrdiraw2cdf.py  runrskcdf2nc.py  runrskcsv2cdf.py  runrsknc2diwasp.py  runrsknc2waves.py  runrskrsk2cdf.py  runsigcdf2nc.py  (+14 more)
stglib/: __init__.py  _version.py  abss.py  argonaut.py  ea400.py  eco.py  eofe.py  exo.py  globalatts.py  glx.py  hobo.py  indexvel.py  iq.py  lisst.py  mar.py  mc.py  met.py  ntu.py  post_install.py  pre_uninstall.py  sg.py  sofar.py  tb.py  tcm.py  troll.py  wxt.py
stglib/aqd/: __init__.py  aqdcdf2nc.py  aqdhdr2cdf.py  aqdutils.py  atmcomp.py  cdf2nc.py  hdr2cdf.py  hrcdf2nc.py  hrhdr2cdf.py  qaqc.py  wvscdf2nc.py  wvsnc2diwasp.py  wvsnc2waves.py  wvswad2cdf.py
stglib/core/: __init__.py  attrs.py  cmd.py  filter.py  qaqc.py  runcmd.py  transform.py  utils.py  waves.py
stglib/data/: .gitattributes  cf-standard-name-table.xml
stglib/lib/: __init__.py
stglib/lib/jonswap/: jonswap.py  jonswap_license.txt
stglib/lib/pyDIWASP/: __init__.py  dirspec.py  infospec.py  interpspec.py  plotspec.py
stglib/rdi/: __init__.py  cdf2nc.py  mat2cdf.py  raw2cdf.py  rdiadcpy.py  rdradcp.py
stglib/rsk/: __init__.py  cdf2nc.py  csv2cdf.py  nc2diwasp.py  nc2waves.py  rsk2cdf.py  rskcdf2nc.py  rsknc2diwasp.py  rskrsk2cdf.py  virtuosoTu_rsk2nc.py  virtuosorsk2nc.py
stglib/sg/: __init__.py  cdf2nc.py  sgutils.py  tid2cdf.py  wb2cdf.py  wvscdf2nc.py  wvsnc2waves.py  wvswb2cdf.py
stglib/sig/: __init__.py  cdf2nc.py  dlfncdf2nc.py  mat2cdf.py  nc2diwasp.py  nc2waves.py  raw2cdf.py  test2cdf.py
stglib/son/: __init__.py  cdf2nc.py  nc2xy.py  raw2cdf.py  sonutils.py
stglib/tests/: .gitattributes  test_RBR_VTu.py  test_puv_quick.py  test_scripts.py  test_stglib.py  test_utils.py  test_xarray.py
stglib/tests/data/: .gitattributes  .gitignore  055109_20220808_1605_config.yaml  1097CIQ_20171214_125948.mat  11032Decn_config.yaml  1119Aexo_config.yaml  (+174 more)
stglib/vec/: __init__.py  cdf2nc.py  dat2cdf.py  nc2waves.py  raw2cdf.py
(+80 files in other folders)
