[metadata]
name = stglib
description = Process data from a variety of oceanographic instrumentation
long_description = file: README.md
author = U.S. Geological Survey
author_email = dnowacki@usgs.gov
url = https://github.com/USGS-CMG/stglib
license = Public domain
python_requires = >=3.9
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options.entry_points]
console_scripts =
    runaqdhdr2cdf.py = stglib.core.runcmd:runaqdhdr2cdf
    runaqdcdf2nc.py = stglib.core.runcmd:runaqdcdf2nc
    runaqdhrhdr2cdf.py = stglib.core.runcmd:runaqdhrhdr2cdf
    runaqdhrcdf2nc.py = stglib.core.runcmd:runaqdhrcdf2nc
    runhobocsv2cdf.py = stglib.core.runcmd:runhobocsv2cdf
    runhobocdf2nc.py = stglib.core.runcmd:runhobocdf2nc
    runiqmat2cdf.py = stglib.core.runcmd:runiqmat2cdf
    runiqcdf2nc.py = stglib.core.runcmd:runiqcdf2nc
    runrskrsk2cdf.py = stglib.core.runcmd:runrskrsk2cdf
    runrskcsv2cdf.py = stglib.core.runcmd:runrskcsv2cdf
    runrskcdf2nc.py = stglib.core.runcmd:runrskcdf2nc
    runrsknc2waves.py = stglib.core.runcmd:runrsknc2waves
    runrsknc2diwasp.py = stglib.core.runcmd:runrsknc2diwasp
    runecocsv2cdf.py = stglib.core.runcmd:runecocsv2cdf
    runecocdf2nc.py = stglib.core.runcmd:runecocdf2nc
    runexocsv2cdf.py = stglib.core.runcmd:runexocsv2cdf
    runexocdf2nc.py = stglib.core.runcmd:runexocdf2nc
    runtrollcsv2cdf.py = stglib.core.runcmd:runtrollcsv2cdf
    runtrollcdf2nc.py = stglib.core.runcmd:runtrollcdf2nc
    runwvswad2cdf.py = stglib.core.runcmd:runwvswad2cdf
    runwvscdf2nc.py = stglib.core.runcmd:runwvscdf2nc
    runwvsnc2diwasp.py = stglib.core.runcmd:runwvsnc2diwasp
    runwvsnc2waves.py = stglib.core.runcmd:runwvsnc2waves
    runwxtcsv2cdf.py = stglib.core.runcmd:runwxtcsv2cdf
    runwxtcdf2nc.py = stglib.core.runcmd:runwxtcdf2nc
    runeofelog2cdf.py = stglib.core.runcmd:runeofelog2cdf
    runeofecdf2nc.py = stglib.core.runcmd:runeofecdf2nc
    runvecdat2cdf.py = stglib.core.runcmd:runvecdat2cdf
    runveccdf2nc.py = stglib.core.runcmd:runveccdf2nc
    runvecnc2waves.py = stglib.core.runcmd:runvecnc2waves
    runsigmat2cdf.py = stglib.core.runcmd:runsigmat2cdf
    runsigraw2cdf.py = stglib.core.runcmd:runsigraw2cdf
    runsigcdf2nc.py = stglib.core.runcmd:runsigcdf2nc
    runsignc2waves.py = stglib.core.runcmd:runsignc2waves
    runlisstcsv2cdf.py = stglib.core.runcmd:runlisstcsv2cdf
    runlisstcdf2nc.py = stglib.core.runcmd:runlisstcdf2nc
    runtcmcsv2cdf.py = stglib.core.runcmd:runtcmcsv2cdf
    runtcmcdf2nc.py = stglib.core.runcmd:runtcmcdf2nc
    runmcasc2cdf.py = stglib.core.runcmd:runmcasc2cdf
    runmccdf2nc.py = stglib.core.runcmd:runmccdf2nc
    runots.py = stglib.core.runcmd:runots

[versioneer]
VCS = git
style = pep440
versionfile_source = stglib/_version.py
versionfile_build = stglib/_version.py
tag_prefix = v
parentdir_prefix = stglib-

[flake8]
ignore =
    # whitespace before ':' - doesn't work well with black
    E203
    E402
    # line too long - let black worry about that
    E501
    # do not assign a lambda expression, use a def
    E731
    # line break before binary operator
    W503
exclude=
    .eggs
    doc

[isort]
default_section = THIRDPARTY
known_first_party = stglib
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 88
